--- a/site/res/style.css
+++ b/site/res/style.css
@@ -1,5 +1,6 @@
 body
 {
+	background-image: url("bg.jpg");
 	background-color: #ffffff;
     margin: 0px;
 	font-family: Calibri;
@@ -29,9 +30,11 @@ body
 
 #context
 {
+	background-color: white;
 	width: 80%;
 	height: auto;
-	padding: auto;
+	overflow:auto;
+	padding-bottom: 40px;
 	padding-top: 40px;
 	text-align: left;
 }
@@ -39,16 +42,47 @@ body
 #context #header
 {
 	text-align: center;
-	min-height: 150px;
 	height: auto;
 	width: auto;
 }
 
+#context #header img
+{
+	max-width: 100%;
+	width: auto;
+	height: auto;
+}
+
+#context #extra
+{
+	float: right;
+	margin: 20px;
+	width: 25%;
+}
+
+#context #content
+{
+	float: left;
+	margin: 20px;
+	width: 65%;
+}
+
+.focused
+{
+	width: auto;
+	height: auto;
+	padding: 10px;
+	border:1px solid #d0d0d0;
+}
+
 #context #footer
 {
-	position:relative;
-	min-height: 150px;
-	margin-top: 100%;
+	width: 80%;
+	height: 10%;
+	padding: 20px;
+	background-color: white;
+	position: absolute;
+	bottom: 0;
 }
 
 .button
@@ -74,8 +108,4 @@ body
 .button a img
 {
 	vertical-align: middle;
-}
-.edit
-{
-
 }
